<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="U_Word2Int" Id="{101b3c48-9017-4249-9013-c8f8bc88ba8f}">
    <Declaration><![CDATA[TYPE U_Word2Int :
UNION
	iWord	: WORD;
	iInt	: INT;
END_UNION
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>